--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,10 @@
 @import "variable.css";
 /*Components*/
 @import "components/status-bar.css";
+@import "components/nav-bar.css";
 /*Screens*/
 @import "screens/login.css";
 body {
   font-family: "Open Sans", sans-serif;
+  height: 1000vh;
 }
