friends screen 3part

--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -10,6 +10,10 @@
   font-size: 32px;
   font-weight: 600;
 }
+
+.screen-header__icons {
+  position: relative;
+}
 .screen-header__icons span {
   margin-left: 20px;
 }
