--- a/css/styles.css
+++ b/css/styles.css
@@ -7,9 +7,11 @@
 @import "components/screen-header.css";
 @import "components/user-component.css";
 @import "components/badge.css";
+@import "components/point.css";
 /*Screens*/
 @import "screens/login.css";
 @import "screens/friends.css";
+@import "screens/find.css";
 body {
   color: #2e363e;
   font-family: "Open Sans", sans-serif;
