실행 초기 splash화면 및 아이콘 일부 애니메이션 추가

--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -69,7 +69,7 @@
   height: 120px;
   border-radius: 10px;
 }
-.oepn-post__heart-count {
+.open-post__heart-count {
   background-color: rgba(0, 0, 0, 0.5);
   color: white;
   padding: 5px;
@@ -81,6 +81,24 @@
   right: 10px;
   font-size: 12px;
 }
-.oepn-post__heart-count span {
+.open-post__heart-count span {
   margin-left: 3px;
+}
+@keyframes heartBeat {
+  0% {
+    color: white;
+    transform: none;
+  }
+  50% {
+    color: tomato;
+    transform: scale(1.5);
+  }
+  100% {
+    color: white;
+    transform: none;
+  }
+}
+.open-post__heart-count:hover i {
+  will-change: transform;
+  animation: heartBeat 1s linear infinite;
 }
